# nancy

./: .gitignore  CMakeLists.txt  cnn.cpp  cnn.h  main.cpp
Activations/: Activations.cpp  Activations.h
Array/: Array.cpp  Array.h
Data/: constants.h  data.h
Layers/Con2d/: Con2d.cpp  Con2d.h
Layers/Dense/: Dense.cpp  Dense.h
Layers/Flatten/: Flatten.cpp  Flatten.h
Layers/MaxPooling/: MaxPooling.cpp  MaxPooling.h
